# evdaemon

./: .gitignore  Makefile.am  NEWS  README  README.in  configure.ac  index.html  mouseblockerd.c  setup.py
debian/: changelog  control  copyright  evdaemon.8  evdaemon.upstart  postinst  preinst  rules  watch
etc/: Makefile.am
etc/evdaemon/: Makefile.am  README
etc/evdaemon/clone/: README  name
etc/evdaemon/clone/id/: README
etc/evdaemon/filter/: README  name
etc/evdaemon/filter/capabilities/: README
etc/evdaemon/monitor/: README
etc/evdaemon/monitor/capabilities/: README
etc/init/: Makefile.am  evdaemon.conf.in
man/: evdaemon.8
src/: Makefile.am  evdaemon.c  mouseblockerd.c  settings.c  settings.h  util.c  util.h
