confdir = $(sysconfdir)/evdaemon
dist_conf_DATA = README

filterconfdir = $(confdir)/filter
dist_filterconf_DATA = filter/README   \
                       filter/duration \
                       filter/name

capabilitiesfilterconfdir = $(filterconfdir)/capabilities
dist_capabilitiesfilterconf_DATA = filter/capabilities/README \
                                   filter/capabilities/key

monitorconfdir = $(confdir)/monitor
dist_monitorconf_DATA = monitor/README \
                        monitor/name

capabilitiesmonitorconfdir = $(monitorconfdir)/capabilities
dist_capabilitiesmonitorconf_DATA = monitor/capabilities/README \
                                    monitor/capabilities/key

cloneconfdir = $(confdir)/clone
dist_cloneconf_DATA = clone/README \
                      clone/name

idcloneconfdir = $(cloneconfdir)/id
dist_idcloneconf_DATA = clone/id/README  \
                        clone/id/bustype \
                        clone/id/vendor  \
                        clone/id/version \
                        clone/id/product
